--- a/style.css
+++ b/style.css
@@ -57,9 +57,16 @@ body {
     transition: all 0.1s ease;
 }
 
-.shake {
+.shake2 {
     animation-name: shake-the-sketcher2;
     animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-iteration-count: infinite;
+}
+
+.shake1 {
+    animation-name: shake-the-sketcher;
+    animation-duration: 0.75s;
     animation-timing-function: ease-out;
     animation-iteration-count: infinite;
 }
@@ -75,21 +82,25 @@ body {
         transform: perspective(75em) rotateX(45deg) scale(0.8) translateY(50px);
         filter: blur(2px);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.493) 0px -40px 40px -30px;
+        animation-timing-function: cubic-bezier(.62,.13,.64,.99);
     }
     40% { 
         transform: perspective(none) rotateX(0deg) scale(1) translateY(0px);
         filter: blur(0px);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        animation-timing-function: cubic-bezier(.03,1.11,.34,.91);
     }
     49% { 
         transform: perspective(75em) rotateX(45deg) scale(0.8) translateY(50px);
         filter: blur(2px); 
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.493) 0px -40px 40px -30px;
+        animation-timing-function: cubic-bezier(.62,.13,.64,.99);
     }
     80% { 
         transform: perspective(none) rotateX(0deg) scale(1);
         filter: blur(0px);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
+        animation-timing-function: cubic-bezier(.03,1.11,.34,.91);
     }
 }
 
