--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 
 .shake2 {
     animation-name: shake-the-sketcher2;
-    animation-duration: 2s;
+    animation-duration: 1.75s;
     animation-timing-function: ease-out;
     animation-iteration-count: infinite;
 }
@@ -88,7 +88,7 @@ body {
         transform: perspective(none) rotateX(0deg) scale(1) translateY(0px);
         filter: blur(0px);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-        animation-timing-function: cubic-bezier(.03,1.11,.34,.91);
+        animation-timing-function: cubic-bezier(.02,.87,.29,.96);
     }
     49% { 
         transform: perspective(75em) rotateX(45deg) scale(0.8) translateY(50px);
@@ -100,7 +100,7 @@ body {
         transform: perspective(none) rotateX(0deg) scale(1);
         filter: blur(0px);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
-        animation-timing-function: cubic-bezier(.03,1.11,.34,.91);
+        animation-timing-function: cubic-bezier(.02,.87,.29,.96);
     }
 }
 
@@ -308,6 +308,7 @@ body {
         width: 480px;
         height: 480px;
     }
+
 }
 
 @media(max-width: 550px) {
@@ -348,6 +349,11 @@ body {
     .pixel-grid {
         width: 300px;
         height: 300px;
+    }
+
+    .knob {
+        height: 75px;
+        width: 75px;
     }
 }
 
