--- a/style.css
+++ b/style.css
@@ -248,14 +248,25 @@ input:checked + .toggler:before {
 }
 
 .pixel {
-    border-bottom: 1px dashed rgba(128, 128, 128, 0.568);
-    border-right: 1px dashed rgba(128, 128, 128, 0.534);
-    border-radius: 2px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 10px;
     transition: all 0.05s ease;
+}
+
+.pixel.grid-lines-on {
+    border-bottom: 1px dashed rgba(128, 128, 128, 0.568);
+    border-right: 1px dashed rgba(128, 128, 128, 0.568);
+    border-radius: 2px;
+}
+
+.pixel.grid-lines-on.last-column {
+    border-right: 0;
+}
+
+.pixel.grid-lines-on.last-row {
+    border-bottom: 0;
 }
 
 .pixel:hover {
