--- a/style.css
+++ b/style.css
@@ -148,19 +148,20 @@ body {
     justify-content: center;
 }
 
+#cb1,
 #cb4 {
     flex-direction: column;
     gap: 2px;
 }
 
-.grid-switch {
+.switch {
     display: inline-block;
     position: relative;
     width: 60px;
     height: 34px;
 }
 
-.grid-switch input {
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
