--- a/style.css
+++ b/style.css
@@ -271,10 +271,19 @@ input:checked + .toggler:before {
 }
 
 .pixel:hover {
-    background: radial-gradient(#00000081, #00000000, #00000000, #00000000, #00000000);
+    animation-name: pixel-hover-blink;
+    animation-timing-function: ease;
+    animation-duration: 1.3s;
+    animation-iteration-count: infinite;
 }
 
-.erasure > .pixel {
+@keyframes pixel-hover-blink {
+    0% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.14); }
+    33% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.24);  }
+    100% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.14);  }
+} 
+
+.clearing > .pixel {
     transition: all 0.2s ease;
 }
 
