--- a/style.css
+++ b/style.css
@@ -231,12 +231,8 @@ input:checked + .toggler:before {
 
 .pixel-grid {
     touch-action: none;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: center;
+    display: grid;
     border: 4px solid rgba(54, 0, 0, 0.651);
-    align-self: center;
     width: 680px;
     height: 680px;
 
@@ -249,25 +245,14 @@ input:checked + .toggler:before {
 }
 
 .pixel {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    transition: all 0.05s ease;
-}
-
-.grid-lines-on > .pixel {
-    border-bottom: 1px dashed rgba(128, 128, 128, 0.568);
-    border-right: 1px dashed rgba(128, 128, 128, 0.568);
+    transition: all 0.2s ease;
     border-radius: 2px;
+    
 }
 
-.grid-lines-on > .pixel.last-column {
-    border-right: 0;
-}
-
-.grid-lines-on > .pixel.last-row {
-    border-bottom: 0;
+.pixel.borders-on {
+    border-bottom: 1px dashed rgba(110, 110, 110, 0.3);
+    border-right: 1px dashed rgba(110, 110, 110, 0.3);
 }
 
 .pixel:hover {
@@ -281,10 +266,17 @@ input:checked + .toggler:before {
     0% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.14); }
     33% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.24);  }
     100% { box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.14);  }
-} 
+}
 
-.clearing > .pixel {
-    transition: all 0.2s ease;
+.pixel.clicked {
+    animation-name: pixel-pop;
+    animation-timing-function: ease;
+    animation-duration: 0.2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes pixel-pop {
+    50% { transform: scale(1.5) }
 }
 
 .knob {
