--- a/style.css
+++ b/style.css
@@ -235,24 +235,20 @@ input:checked + .toggler:before {
     border: 4px solid rgba(54, 0, 0, 0.651);
     width: 680px;
     height: 680px;
+    background-color: rgb(255, 239, 239);
 
-    background: linear-gradient(217deg, rgba(253, 253, 253, 0.8), rgba(206, 206, 206, 0.356) 70.71%),            
-                linear-gradient(127deg, rgba(192, 197, 192, 0.8), rgba(248, 248, 248, 0.452) 70.71%),            
-                linear-gradient(336deg, rgba(99, 99, 99, 0.8), rgba(124, 124, 124, 0.349) 70.71%);
-
-    box-shadow: rgba(50, 50, 93, 0.25) 50px 0px 100px -20px inset, rgba(0, 0, 0, 0.3) 30px 0px 60px -30px inset;
+    /* box-shadow: rgba(50, 50, 93, 0.25) 50px 0px 100px -20px inset, rgba(0, 0, 0, 0.3) 30px 0px 60px -30px inset; */
     
 }
 
-.pixel {
+.clearing > .pixel {
     transition: all 0.2s ease;
-    border-radius: 2px;
-    
 }
 
 .pixel.borders-on {
-    border-bottom: 1px dashed rgba(110, 110, 110, 0.3);
-    border-right: 1px dashed rgba(110, 110, 110, 0.3);
+    border-bottom: 1px dashed rgb(120, 183, 255);
+    border-right: 1px dashed rgb(120, 183, 255);
+    border-radius: 2px;
 }
 
 .pixel.clicked {
